<resources>
    <string name="app_name">Quizeee</string>
    <string name="Question1">Q1. What is the capital of India?</string>
    <string name="Question2">Q2. What is the capital of United State of America?</string>
    <string name="Question3">Q3. What is the capital of Australia?</string>
    <string name="Question4">Q4. What is the capital of Russia?</string>
    <string name="Question5">Q5. What is the capital of New Zealand?</string>
    <string name="napier">Napier</string>
    <string name="wellington">Wellington</string>
    <string name="auckland">Auckland</string>
    <string name="play_again">Play Again</string>
    <string name="todo">TODO</string>
    <string name="delhi">Delhi</string>
    <string name="mumbai">Mumbai</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="washington_d_c">Washington, D.C.</string>
    <string name="todo1">TODO</string>
    <string name="moscow">Moscow</string>
    <string name="submit">Submit</string>
    <string name="todo2">TODO</string>
    <string name="melbourne">Melbourne</string>
    <string name="bhopal">Bhopal</string>
    <string name="todo3">TODO</string>
    <string name="new_york">New York</string>
    <string name="veliky_novgorod">Veliky Novgorod</string>
    <string name="todo4">TODO</string>
    <string name="canberra">Canberra</string>
    <string name="sydney">Sydney</string>
    <string name="texas">Texas</string>
</resources>